      all pointers.

  * Add error module
    - Bring the t_bunny_error type that complete errno error codes.
      **Compatibility break!** as t_bunny_error was used by the network module.
    - Bring associated human readable description.
    - Bring bunny_perror, bunny_strerror, bunny_errno, etc.

  * Edit event module
    - Empty the event stack when leaving bunny_loop or bunny_loop_mw.
    - Add on_entering_context and on_leaving_context response function.
    - Add bunny_get_frequency to get the frequency of the main loop.
    - The t_bunny_display response function now take a non const pointer. **Compatibility break!**
    - Add a minimal movement value to call joystick axis event, to improve
      support of analogic joystick, especially in menus.
    - Add a completed asynchronous computation request event.

  * Edit graphic module
    - Add to bunny_load_picture and bunny_load_pixelarray the ability to load
      configuration file presetting fields of their returned structure.
    - Uncipher picture files when loading them if a loading cipher function is set.

  * Edit text module
    - Add to bunny_load_font (and add bunny_load_text) the ability to load
      configuration file presetting fields of their returned structure.

  * Add sprite module
    - Bring an automatically animated picture, configured by script and specific
      orders.

  * Add context module
    - Bring structure to normalize context and allow the design of reusable contexts.
    - Bring the bunny splash screen context

  * Edit placement module
    - Add bunny_real_width and bunny_real_height C11 macro to compute the displayed
      size of window and clipable elements.

  * Edit color module
    - Fix GREY macro to GRAY, same for ALPHA_GREY. Old version are still available in
      compat.h and are deprecated.

  * Add a parsing module, bringing generic parsing tools.

  * Add camera module
    - Bring camera capture.
    - Bring heatracking capability.

  * Add plugin module