@@ -1,12 +1,11 @@
 <div class="prototype">
-  $Tsize_t@ $Sbunny_get_frequency@($Tvoid@);
+  $Tint@ $Sbunny_get_frequency@($Tvoid@);
 </div>
 <hr />
 
 <div class="resume">
   <h3>Description</h3>
-  $A This function returns the frequency of the bunny_loop or of the bunny_loop_mw in Hertz,
-  under perfect conditions.
+  $A This function returns the frequency under perfect conditions of the bunny_loop or of the bunny_loop_mw in Hertz.
 </div>
 <hr />
 
